update flash card component to use test data, create results page